@@ -198,6 +198,10 @@ $defcfg = array( '$config_version' => array( 'name' => _("Config File Version"),
                                                     'type' => SMOPT_TYPE_BOOLEAN ),
                  '$hide_sm_attributions' => array( 'name' => _("Hide SM attributions"),
                                                    'type' => SMOPT_TYPE_BOOLEAN ),
+                 '$edit_identity' => array( 'name' => _("Allow editing of identities"),
+                                            'type' => SMOPT_TYPE_BOOLEAN ),
+                 '$edit_name' => array( 'name' => _("Allow editing of full name"),
+                                        'type' => SMOPT_TYPE_BOOLEAN ),
                  /* --------------------------------------------------------*/
                  'Group5' => array( 'name' => _("Message of the Day"),
                                     'type' => SMOPT_TYPE_TITLE ),
